--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,6 +1,6 @@
 # TODO: Change the name of the org 
-org: tunv
-app: serverless-todo-app
+org: tunv22
+app: serverless-todo-app-tunv22
 service: serverless-todo-app
 
 plugins:
@@ -190,7 +190,6 @@ resources:
     # TODO: Create a DynamoDB table with local secondary index and a composite key
     TodosTable:
       Type: AWS::DynamoDB::Table
-      Properties:
       Properties:
         AttributeDefinitions:
           - AttributeName: userId
