--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "serverless-reqvalidator-plugin": "^1.0.4",
     "serverless-webpack": "^5.7.1",
     "ts-loader": "^5.4.5",
+    "@types/express-serve-static-core": "^4.0.50",
     "typescript": "^3.9.10",
     "webpack": "^4.46.0"
   },
