--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -7,7 +7,8 @@ plugins:
   - serverless-webpack
   - serverless-iam-roles-per-function
   - serverless-plugin-tracing
-
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
 provider:
   name: aws
   runtime: nodejs14.x
@@ -62,7 +63,6 @@ functions:
           method: get
           path: todos
           cors: true
-          authorizer: Auth
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -85,10 +85,10 @@ functions:
           method: post
           path: todos
           cors: true
-          authorizer: Auth
           request:
             schemas:
               application/json: ${file(models/create-todo-model.json)}
+          reqValidatorName: RequestBodyValidator    
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -109,10 +109,10 @@ functions:
           method: put
           path: todos/{todoId}
           cors: true
-          authorizer: Auth
           request:
             schema:
               application/json: ${file(src/requests/update-todo-request.json)}
+          reqValidatorName: RequestBodyValidator
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -133,7 +133,6 @@ functions:
           method: delete
           path: todos/{todoId}
           cors: true
-          authorizer: Auth
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -154,7 +153,6 @@ functions:
           method: post
           path: todos/{todoId}/attachment
           cors: true
-          authorizer: Auth
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -175,7 +173,16 @@ resources:
   Resources:
     # Add necessary AWS resources. You will need at least the following AWS resources
     # TODO: Fill the properties
-    # Feel free to change the names as you like. 
+    # Feel free to change the names as you like.
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
+        
     GatewayResponseDefault4XX:
       Type: AWS::ApiGateway::GatewayResponse
       Properties:
